# MullerAutomotiveFacialRecognition

./: .gitignore  README.md
back/: .env  Cargo.toml
back/src/: lib.rs  main.rs
back/src/helpers/: database.rs  mod.rs  state.rs
front/: package-lock.json  package.json
front/public/: index.html  manifest.json
front/src/: index.js
front/src/assets/services/: Users.js
front/src/assets/style/: 404.css  Add_User.css  Admin_Login.css  Admin_Panel.css  App.css  Facial_Recognition.css  Font.css  Footer.css  Header.css  Modal.css  RGPD.css
front/src/components/: Footer.jsx  Header.jsx  Loading.jsx  Modal_Delete.jsx
front/src/pages/: 404.jsx  Add_User.jsx  Admin_Login.jsx  Admin_Panel.jsx  App.jsx  Edit_User.jsx  Facial_Recognition.jsx  Home.jsx  RGPD.jsx
front/src/provider/: AuthProvider.js
