[package]
name = "rust-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Logging and env
dotenvy = "0.15.7"
tracing = "0.1.41"
bcrypt = "0.17.0"

# Http server
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors"] }
tokio = { version = "1.44.0", features = ["full"] }

# Parsing
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Database
deadpool-postgres = "0.14.1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros"] }

